Files/PDML/PDMLParser.js
// Generated from PDML.g4 by ANTLR 4.13.2
// jshint ignore: start
// import antlr4 from 'antlr4';
import PDMLListener from './PDMLListener.js';


//const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

//const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

// const sharedContextCache = new antlr4.atn.PredictionContextCache();

const atn = new window.antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map((ds, index) => new window.antlr4.dfa.DFA(ds, index));

const sharedContextCache = new window.antlr4.atn.PredictionContextCache();

export default class PDMLParser extends antlr4.Parser {

    static grammarFileName = "PDML.g4";
    static literalNames = [ null, "'<'", "'>'", "'</'", "'/>'", "'{'", "'}'", 
                            "'['", "']'", null, null, null, "'='" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, "STRING_LITERAL", "HEX_COLOR", "BOOL_LITERAL", 
                             "ASSIGN", "COMMENT", "SINGLE_COMMENT", "MULTI_COMMENT", 
                             "IDFR", "NUMBER", "WS" ];
    static ruleNames = [ "grammarSpec", "body", "tag", "open_tag", "close_tag", 
                         "self_closing_tag", "valueAssignment", "value" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = PDMLParser.ruleNames;
        this.literalNames = PDMLParser.literalNames;
        this.symbolicNames = PDMLParser.symbolicNames;
    }



	grammarSpec() {
	    let localctx = new GrammarSpecContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, PDMLParser.RULE_grammarSpec);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 16;
	        this.body();
	        this.state = 17;
	        this.match(PDMLParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	body() {
	    let localctx = new BodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, PDMLParser.RULE_body);
	    try {
	        this.state = 21;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 19;
	            this.tag();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 20;
	            this.self_closing_tag();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	tag() {
	    let localctx = new TagContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, PDMLParser.RULE_tag);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 23;
	        this.open_tag();
	        this.state = 27;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,1,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 24;
	                this.match(PDMLParser.WS); 
	            }
	            this.state = 29;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,1,this._ctx);
	        }

	        this.state = 33;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===1) {
	            this.state = 30;
	            this.body();
	            this.state = 35;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 39;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===18) {
	            this.state = 36;
	            this.match(PDMLParser.WS);
	            this.state = 41;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 42;
	        this.close_tag();
	        this.state = 46;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 43;
	                this.match(PDMLParser.WS); 
	            }
	            this.state = 48;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	open_tag() {
	    let localctx = new Open_tagContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, PDMLParser.RULE_open_tag);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 49;
	        this.match(PDMLParser.T__0);
	        this.state = 50;
	        this.match(PDMLParser.IDFR);
	        this.state = 54;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===18) {
	            this.state = 51;
	            this.match(PDMLParser.WS);
	            this.state = 56;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 66;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===16) {
	            this.state = 57;
	            this.valueAssignment();
	            this.state = 61;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===18) {
	                this.state = 58;
	                this.match(PDMLParser.WS);
	                this.state = 63;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 68;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 69;
	        this.match(PDMLParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	close_tag() {
	    let localctx = new Close_tagContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, PDMLParser.RULE_close_tag);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 71;
	        this.match(PDMLParser.T__2);
	        this.state = 72;
	        this.match(PDMLParser.IDFR);
	        this.state = 76;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===18) {
	            this.state = 73;
	            this.match(PDMLParser.WS);
	            this.state = 78;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 79;
	        this.match(PDMLParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	self_closing_tag() {
	    let localctx = new Self_closing_tagContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, PDMLParser.RULE_self_closing_tag);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 81;
	        this.match(PDMLParser.T__0);
	        this.state = 82;
	        this.match(PDMLParser.IDFR);
	        this.state = 86;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===18) {
	            this.state = 83;
	            this.match(PDMLParser.WS);
	            this.state = 88;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 98;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===16) {
	            this.state = 89;
	            this.valueAssignment();
	            this.state = 93;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===18) {
	                this.state = 90;
	                this.match(PDMLParser.WS);
	                this.state = 95;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 100;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 101;
	        this.match(PDMLParser.T__3);
	        this.state = 105;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,12,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 102;
	                this.match(PDMLParser.WS); 
	            }
	            this.state = 107;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,12,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	valueAssignment() {
	    let localctx = new ValueAssignmentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, PDMLParser.RULE_valueAssignment);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 108;
	        this.match(PDMLParser.IDFR);
	        this.state = 112;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===18) {
	            this.state = 109;
	            this.match(PDMLParser.WS);
	            this.state = 114;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 115;
	        this.match(PDMLParser.ASSIGN);
	        this.state = 119;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===18) {
	            this.state = 116;
	            this.match(PDMLParser.WS);
	            this.state = 121;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 122;
	        this.value();
	        this.state = 126;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,15,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 123;
	                this.match(PDMLParser.WS); 
	            }
	            this.state = 128;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,15,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	value() {
	    let localctx = new ValueContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, PDMLParser.RULE_value);
	    var _la = 0;
	    try {
	        this.state = 191;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 11:
	            localctx = new BoolLitContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 129;
	            this.match(PDMLParser.BOOL_LITERAL);
	            break;
	        case 17:
	            localctx = new NumLitContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 130;
	            this.match(PDMLParser.NUMBER);
	            break;
	        case 9:
	            localctx = new StringLitContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 131;
	            this.match(PDMLParser.STRING_LITERAL);
	            break;
	        case 10:
	            localctx = new HexColourContext(this, localctx);
	            this.enterOuterAlt(localctx, 4);
	            this.state = 132;
	            this.match(PDMLParser.HEX_COLOR);
	            break;
	        case 5:
	            localctx = new StructContext(this, localctx);
	            this.enterOuterAlt(localctx, 5);
	            this.state = 133;
	            this.match(PDMLParser.T__4);
	            this.state = 137;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,16,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 134;
	                    this.match(PDMLParser.WS); 
	                }
	                this.state = 139;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,16,this._ctx);
	            }

	            this.state = 153;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===16) {
	                this.state = 140;
	                this.valueAssignment();
	                this.state = 150;
	                this._errHandler.sync(this);
	                var _alt = this._interp.adaptivePredict(this._input,18,this._ctx)
	                while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                    if(_alt===1) {
	                        this.state = 144;
	                        this._errHandler.sync(this);
	                        _la = this._input.LA(1);
	                        while(_la===18) {
	                            this.state = 141;
	                            this.match(PDMLParser.WS);
	                            this.state = 146;
	                            this._errHandler.sync(this);
	                            _la = this._input.LA(1);
	                        }
	                        this.state = 147;
	                        this.valueAssignment(); 
	                    }
	                    this.state = 152;
	                    this._errHandler.sync(this);
	                    _alt = this._interp.adaptivePredict(this._input,18,this._ctx);
	                }

	            }

	            this.state = 158;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===18) {
	                this.state = 155;
	                this.match(PDMLParser.WS);
	                this.state = 160;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 161;
	            this.match(PDMLParser.T__5);
	            break;
	        case 7:
	            localctx = new ArrayContext(this, localctx);
	            this.enterOuterAlt(localctx, 6);
	            this.state = 162;
	            this.match(PDMLParser.T__6);
	            this.state = 166;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,21,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 163;
	                    this.match(PDMLParser.WS); 
	                }
	                this.state = 168;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,21,this._ctx);
	            }

	            this.state = 182;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if((((_la) & ~0x1f) === 0 && ((1 << _la) & 134816) !== 0)) {
	                this.state = 169;
	                this.value();
	                this.state = 179;
	                this._errHandler.sync(this);
	                var _alt = this._interp.adaptivePredict(this._input,23,this._ctx)
	                while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                    if(_alt===1) {
	                        this.state = 173;
	                        this._errHandler.sync(this);
	                        _la = this._input.LA(1);
	                        while(_la===18) {
	                            this.state = 170;
	                            this.match(PDMLParser.WS);
	                            this.state = 175;
	                            this._errHandler.sync(this);
	                            _la = this._input.LA(1);
	                        }
	                        this.state = 176;
	                        this.value(); 
	                    }
	                    this.state = 181;
	                    this._errHandler.sync(this);
	                    _alt = this._interp.adaptivePredict(this._input,23,this._ctx);
	                }

	            }

	            this.state = 187;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===18) {
	                this.state = 184;
	                this.match(PDMLParser.WS);
	                this.state = 189;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 190;
	            this.match(PDMLParser.T__7);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

PDMLParser.EOF = antlr4.Token.EOF;
PDMLParser.T__0 = 1;
PDMLParser.T__1 = 2;
PDMLParser.T__2 = 3;
PDMLParser.T__3 = 4;
PDMLParser.T__4 = 5;
PDMLParser.T__5 = 6;
PDMLParser.T__6 = 7;
PDMLParser.T__7 = 8;
PDMLParser.STRING_LITERAL = 9;
PDMLParser.HEX_COLOR = 10;
PDMLParser.BOOL_LITERAL = 11;
PDMLParser.ASSIGN = 12;
PDMLParser.COMMENT = 13;
PDMLParser.SINGLE_COMMENT = 14;
PDMLParser.MULTI_COMMENT = 15;
PDMLParser.IDFR = 16;
PDMLParser.NUMBER = 17;
PDMLParser.WS = 18;

PDMLParser.RULE_grammarSpec = 0;
PDMLParser.RULE_body = 1;
PDMLParser.RULE_tag = 2;
PDMLParser.RULE_open_tag = 3;
PDMLParser.RULE_close_tag = 4;
PDMLParser.RULE_self_closing_tag = 5;
PDMLParser.RULE_valueAssignment = 6;
PDMLParser.RULE_value = 7;

class GrammarSpecContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = PDMLParser.RULE_grammarSpec;
    }

	body() {
	    return this.getTypedRuleContext(BodyContext,0);
	};

	EOF() {
	    return this.getToken(PDMLParser.EOF, 0);
	};

	enterRule(listener) {
	    if(listener instanceof PDMLListener ) {
	        listener.enterGrammarSpec(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof PDMLListener ) {
	        listener.exitGrammarSpec(this);
		}
	}


}



class BodyContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = PDMLParser.RULE_body;
    }

	tag() {
	    return this.getTypedRuleContext(TagContext,0);
	};

	self_closing_tag() {
	    return this.getTypedRuleContext(Self_closing_tagContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof PDMLListener ) {
	        listener.enterBody(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof PDMLListener ) {
	        listener.exitBody(this);
		}
	}


}



class TagContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = PDMLParser.RULE_tag;
    }

	open_tag() {
	    return this.getTypedRuleContext(Open_tagContext,0);
	};

	close_tag() {
	    return this.getTypedRuleContext(Close_tagContext,0);
	};

	WS = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(PDMLParser.WS);
	    } else {
	        return this.getToken(PDMLParser.WS, i);
	    }
	};


	body = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(BodyContext);
	    } else {
	        return this.getTypedRuleContext(BodyContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof PDMLListener ) {
	        listener.enterTag(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof PDMLListener ) {
	        listener.exitTag(this);
		}
	}


}



class Open_tagContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = PDMLParser.RULE_open_tag;
    }

	IDFR() {
	    return this.getToken(PDMLParser.IDFR, 0);
	};

	WS = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(PDMLParser.WS);
	    } else {
	        return this.getToken(PDMLParser.WS, i);
	    }
	};


	valueAssignment = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ValueAssignmentContext);
	    } else {
	        return this.getTypedRuleContext(ValueAssignmentContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof PDMLListener ) {
	        listener.enterOpen_tag(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof PDMLListener ) {
	        listener.exitOpen_tag(this);
		}
	}


}



class Close_tagContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = PDMLParser.RULE_close_tag;
    }

	IDFR() {
	    return this.getToken(PDMLParser.IDFR, 0);
	};

	WS = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(PDMLParser.WS);
	    } else {
	        return this.getToken(PDMLParser.WS, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof PDMLListener ) {
	        listener.enterClose_tag(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof PDMLListener ) {
	        listener.exitClose_tag(this);
		}
	}


}



class Self_closing_tagContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = PDMLParser.RULE_self_closing_tag;
    }

	IDFR() {
	    return this.getToken(PDMLParser.IDFR, 0);
	};

	WS = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(PDMLParser.WS);
	    } else {
	        return this.getToken(PDMLParser.WS, i);
	    }
	};


	valueAssignment = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ValueAssignmentContext);
	    } else {
	        return this.getTypedRuleContext(ValueAssignmentContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof PDMLListener ) {
	        listener.enterSelf_closing_tag(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof PDMLListener ) {
	        listener.exitSelf_closing_tag(this);
		}
	}


}



class ValueAssignmentContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = PDMLParser.RULE_valueAssignment;
    }

	IDFR() {
	    return this.getToken(PDMLParser.IDFR, 0);
	};

	ASSIGN() {
	    return this.getToken(PDMLParser.ASSIGN, 0);
	};

	value() {
	    return this.getTypedRuleContext(ValueContext,0);
	};

	WS = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(PDMLParser.WS);
	    } else {
	        return this.getToken(PDMLParser.WS, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof PDMLListener ) {
	        listener.enterValueAssignment(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof PDMLListener ) {
	        listener.exitValueAssignment(this);
		}
	}


}



class ValueContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = PDMLParser.RULE_value;
    }


	 
		copyFrom(ctx) {
			super.copyFrom(ctx);
		}

}


class StructContext extends ValueContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	WS = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(PDMLParser.WS);
	    } else {
	        return this.getToken(PDMLParser.WS, i);
	    }
	};


	valueAssignment = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ValueAssignmentContext);
	    } else {
	        return this.getTypedRuleContext(ValueAssignmentContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof PDMLListener ) {
	        listener.enterStruct(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof PDMLListener ) {
	        listener.exitStruct(this);
		}
	}


}

PDMLParser.StructContext = StructContext;

class StringLitContext extends ValueContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	STRING_LITERAL() {
	    return this.getToken(PDMLParser.STRING_LITERAL, 0);
	};

	enterRule(listener) {
	    if(listener instanceof PDMLListener ) {
	        listener.enterStringLit(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof PDMLListener ) {
	        listener.exitStringLit(this);
		}
	}


}

PDMLParser.StringLitContext = StringLitContext;

class HexColourContext extends ValueContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	HEX_COLOR() {
	    return this.getToken(PDMLParser.HEX_COLOR, 0);
	};

	enterRule(listener) {
	    if(listener instanceof PDMLListener ) {
	        listener.enterHexColour(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof PDMLListener ) {
	        listener.exitHexColour(this);
		}
	}


}

PDMLParser.HexColourContext = HexColourContext;

class ArrayContext extends ValueContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	WS = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(PDMLParser.WS);
	    } else {
	        return this.getToken(PDMLParser.WS, i);
	    }
	};


	value = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ValueContext);
	    } else {
	        return this.getTypedRuleContext(ValueContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof PDMLListener ) {
	        listener.enterArray(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof PDMLListener ) {
	        listener.exitArray(this);
		}
	}


}

PDMLParser.ArrayContext = ArrayContext;

class BoolLitContext extends ValueContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	BOOL_LITERAL() {
	    return this.getToken(PDMLParser.BOOL_LITERAL, 0);
	};

	enterRule(listener) {
	    if(listener instanceof PDMLListener ) {
	        listener.enterBoolLit(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof PDMLListener ) {
	        listener.exitBoolLit(this);
		}
	}


}

PDMLParser.BoolLitContext = BoolLitContext;

class NumLitContext extends ValueContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	NUMBER() {
	    return this.getToken(PDMLParser.NUMBER, 0);
	};

	enterRule(listener) {
	    if(listener instanceof PDMLListener ) {
	        listener.enterNumLit(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof PDMLListener ) {
	        listener.exitNumLit(this);
		}
	}


}

PDMLParser.NumLitContext = NumLitContext;


PDMLParser.GrammarSpecContext = GrammarSpecContext; 
PDMLParser.BodyContext = BodyContext; 
PDMLParser.TagContext = TagContext; 
PDMLParser.Open_tagContext = Open_tagContext; 
PDMLParser.Close_tagContext = Close_tagContext; 
PDMLParser.Self_closing_tagContext = Self_closing_tagContext; 
PDMLParser.ValueAssignmentContext = ValueAssignmentContext; 
PDMLParser.ValueContext = ValueContext; 
